# lettermint-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  fix-code-style.yml  release-to-discord.yml  release.yml
examples/: async_send.py  basic_send.py  webhook_verification.py  with_attachments.py
src/lettermint/: __init__.py  client.py  exceptions.py  lettermint.py  types.py  webhook.py
src/lettermint/endpoints/: __init__.py  email.py  endpoint.py
tests/: __init__.py  conftest.py  test_client.py  test_email.py  test_webhook.py
