[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lettermint"
version = "1.0.0"
description = "Official Lettermint Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Bjarn Bronsveld", email = "bjarn@lettermint.co" }
]
keywords = ["lettermint", "email", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/lettermint/lettermint-python"
Documentation = "https://github.com/lettermint/lettermint-python#readme"
Repository = "https://github.com/lettermint/lettermint-python"
Issues = "https://github.com/lettermint/lettermint-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lettermint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lettermint"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/lettermint/__init__.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
